<resources>
    <!-- Global -->
    <string name="app_name">Genix</string>
    <string name="game_name">Genix</string>


    <!-- Tutorial activity -->
    <string name="about_genix">Genix is a Trivia game. Questions are fetched from OpenTriviaDB.</string>
    <string name="about_random_game">Play a random game with all kinds of questions.</string>
    <string name="about_make_game">Or create a game. You can choose the time, number of questions, difficulty, theme and type of questions.</string>
    <string name="about_play">Lessgo!</string>


    <!-- Main activity -->
    <string name="question">Do you know trivia?</string>
    <string name="option_play">Play a random game</string>
    <string name="option_create">Choose your game</string>
    <string name="option_see_ranking">Your ranking</string>


    <!-- About activity -->
    <string name="about_name">About</string>
    <string name="about_project">This app was made as a project for PJI discipline at Instituto Federal de São Paulo.</string>
    <string name="about_devs">Students: Matheus &#38;&#38; Pedro</string>
    <string name="about_professor">Professor: Danilo</string>
    <string name="button_source">Source</string>
    <string name="button_licenses">OS Licenses</string>


    <!-- Open source licenses -->
    <string name="feathericons_mobile">feathericons-for-mobile: https://github.com/sharaquss/feathericons-for-mobile</string>


    <!-- Game activity -->
    <string name="game_time_remaining">Time <br /> remaining:</string>
    <string name="game_question">Question:</string>
    <string name="game_true">True</string>
    <string name="game_false">False</string>



    <!-- Game overview activity -->
    <string name="game_overview">Last game overview:</string>
    <string name="game_overview_time">Time:</string>
    <string name="game_overview_correct_answers">Correct answers:</string>


    <!-- Create game activity -->
    <string name="create_game">Create your game</string>
    <string name="create_category">Category:</string>
    <string name="create_number">Number of questions:</string>
    <string name="create_difficulty">Difficulty:</string>
    <string name="create_type">Type of questions:</string>
    <string name="create_time">Total time:</string>
    <string name="create_generate">Generate game!</string>
    <string name="create_reset">Reset</string>

    <!-- Error activity -->
    <string name="error_message">There was an error when fetching questions! Please go back and try a new game!</string>
    <string name="error_label">Error!</string>
    <string name="error_back_button">Back to home</string>

    <!-- String-arrays -->
    <string-array name="create_arr_category">
        <item>Any</item>
        <item>General Knowledge</item>

        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="create_arr_difficulty">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="create_arr_type">
        <item>Any</item>
        <item>Multiple questions</item>
        <item>True or False</item>
    </string-array>
    <string-array name="create_arr_time">
        <item>60s</item>
        <item>90s</item>
        <item>30s</item>
    </string-array>
    <string-array name="create_arr_questions">
        <item>10</item>
        <item>5</item>
        <item>15</item>
    </string-array>
</resources>