<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblGameName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/questrial"
        android:text="@string/game_name"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblQuestion5"
        android:layout_width="338dp"
        android:layout_height="99dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/about_genix"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lblQuestion6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblGameName2"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/lblQuestion4"
        android:layout_width="337dp"
        android:layout_height="122dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/about_make_game"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblQuestion6"
        android:layout_width="338dp"
        android:layout_height="99dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/about_random_game"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lblQuestion4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="612dp"
        android:fontFamily="@font/questrial"
        android:text="@string/about_play"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="25sp"
        app:backgroundTint="#CADBF8"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>