<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:fontFamily="@font/questrial"
        android:text="@string/create_generate"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="25sp"
        app:backgroundTint="#c9ff84"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.514"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/questrial"
        android:gravity="fill"
        android:text="@string/create_category"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:entries="@array/create_arr_category"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/spinnerQuestions"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/questrial"
        android:gravity="fill"
        android:text="@string/create_number"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="324dp"
        android:fontFamily="@font/questrial"
        android:gravity="fill"
        android:text="@string/create_difficulty"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerQuestions"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:entries="@array/create_arr_questions"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/spinnerDifficulty"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="280dp"
        android:fontFamily="@font/questrial"
        android:gravity="fill"
        android:text="@string/create_type"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/create_arr_time"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:entries="@array/create_arr_difficulty"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/spinnerType"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:entries="@array/create_arr_type"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTime"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="224dp"
        android:fontFamily="@font/questrial"
        android:gravity="fill"
        android:text="@string/create_time"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgReturnToMenu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/lblAppName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/questrial"
        android:text="@string/game_name"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgReturnToMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/create_game"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAppName3"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>