<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/questrial"
        android:text="@string/game_name"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/questrial"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayRandomGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblGameName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPlayRandomGame"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="312dp"
        android:fontFamily="@font/questrial"
        android:text="@string/option_play"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="25sp"
        app:backgroundTint="#CAF8ED"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnChooseGame"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnChooseGame"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnChooseGame"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:fontFamily="@font/questrial"
        android:text="@string/option_create"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="25sp"
        app:backgroundTint="#C9FF84"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToRanking"
        app:layout_constraintEnd_toEndOf="@+id/btnGoToRanking"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnGoToRanking"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayRandomGame"
        app:layout_constraintVertical_bias="0.482"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnGoToRanking"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginBottom="156dp"
        android:fontFamily="@font/questrial"
        android:text="@string/option_see_ranking"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="25sp"
        app:backgroundTint="#DECAF8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/imgAbout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/info" />

</androidx.constraintlayout.widget.ConstraintLayout>